<resources>
    <string name="app_name">iSee</string>
    <string name="welcome">Welcome to iSee</string>
    <string name="explore">Explore us</string>
    <string name="welcomescreen">welcomescreen</string>
    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>
    <string name="Or">Or</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget">Forget?</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account_string">Don\'t have an account ?\ </string>
    <string name="signup_terms_string">By signing in you agree to our\ </string>
    <string name="terms_of_services">Terms of Service</string>
    <string name="username_hint">example@iSee.com</string>
    <string name="let_s_fill_in">Let\'s fill in\ </string>
    <string name="from_here">From Here</string>
    <string name="oops_it_s_empty">Oops,\ it\'s empty!</string>
    <string name="todo">TODO</string>
    <string name="createAccount">Create Account !</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="alreadyAccountString">Already have an account ?\ </string>
    <string name="xxxxx">XXXXX</string>
    <string name="yyyyyyy">YYYYYYY</string>
    <string name="next">Next</string>
    <string name="newPassword">Set a new Password</string>
    <string name="EnterPasswordNew">Enter the new password you would like to use and \nlogin again\.</string>
    <string name="Confirm">Confirm</string>
    <string name="PasswordHint">******</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="EnterPin">Enter the pin code</string>
    <string name="EnterPinEmail">Enter the pin code received in your email</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_confirmation">Enter your Email to confirm\nyour identity\.</string>
    <string name="enterEmail">Enter Email</string>
    <string name="success">Success!</string>
    <string name="successfulPayment">Let\'s seeing the world together</string>
    <string name="startCourse">Start Now</string>
    <string name="backToHome">Back to Home</string>
    <string name="my_wish_list">My Wishlist</string>
    <string name="Cart">Cart</string>
    <string name="Continue">Continue</string>
    <string name="uiAndUx">UI &amp; UX Thinking\nFor beginners</string>
    <string name="By">By XXXX YYYY</string>
    <string name="price">$12.99</string>
    <string name="characterArt">Character Art\nSchool Course</string>
    <string name="ByZ">By XXX ZZZ</string>
    <string name="price2">$49.00</string>
    <string name="UltimateDrawing">The Ultimate\nDrawing Course</string>
    <string name="ByT">By XXX TTT</string>
    <string name="price3">$64.00</string>
    <string name="name">Name</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardNumberHint">1000 2345 6000 7890</string>
    <string name="expiry">Expiry Date</string>
    <string name="expHint">00–00</string>
    <string name="CVC">CVC</string>
    <string name="cVCHint">000</string>
    <string name="save">Save this card</string>
    <string name="checkout">Or Checkout With</string>
    <string name="total">TOTAL</string>
    <string name="cost">$123.99</string>
    <string name="ConfirmPayment">CONFIRM PAYMENT</string>
    <string name="backToCart">BACK TO CART</string>
    <string name="nameHint">XXXXX YYYYY</string>
    <string name="payment">Payment</string>
    <string name="back">Back</string>
    <string name="uiAndUx2">UI &amp; UX Thinking For beginners</string>
    <string name="lectures">Lectures</string>
    <string name="resource">Resource</string>
    <string name="num1">01</string>
    <string name="num2">02</string>
    <string name="num3">03</string>
    <string name="num4">04</string>
    <string name="num5">05</string>
    <string name="time1">5:35 mins</string>
    <string name="time2">19:04 mins</string>
    <string name="time3">12:48 mins</string>
    <string name="time4">37:54 mins</string>
    <string name="time5">26:35 mins</string>
    <string name="welcomeToTheCourse">Welcome to the Course</string>
    <string name="intro">Design Thinking - Intro</string>
    <string name="process">Design Thinking Process</string>
    <string name="perspective">Customer Perspective</string>
    <string name="hello_xxxxx">Hello, XXXXX!</string>
    <string name="search_for_subject_you_want_to_learn">Search for subject you want to learn</string>
    <string name="join_a_live_stream">Join a live stream</string>
    <string name="categories">Categories</string>
    <string name="see_all"><![CDATA[See All >>]]></string>
    <string name="newest">Newest</string>
    <string name="popular">Popular</string>
    <string name="fratured">Fratured</string>
    <string name="search_for_subject_you_want_to_nstudy">Search for subject you want to\nstudy</string>
    <string name="ux_design">UX design</string>
    <string name="search_for_subject_you_want_to_nstudy2">Search for subject you want to\nstudy</string>
    <string name="_4_2">4.2</string>
    <string name="_12_99">$12.99</string>
    <string name="this_course_includes">This Course includes</string>
    <string name="illustrator_cc_n2020_masterclass">Illustrator CC \n2020 MasterClass</string>
    <string name="my_courses">My Courses</string>
    <string name="_5_hours_on_demand_video">5 hours on-demand video</string>
    <string name="watch_on_total_5_hours_on_demand_video">Watch on total 5 hours on-demand video</string>
    <string name="_1_downloadable_resource">1 downloadable resource</string>
    <string name="share">Share</string>
    <string name="_1_article">1 article</string>
    <string name="total_1_easy_to_understand_article">Total 1 easy to understand article</string>
    <string name="total_1_lifetime_downloadable_resource">Total 1 lifetime downloadable resource</string>
    <string name="requirements">Requirements</string>
    <string name="desciption">Desciption</string>
    <string name="windows_10_or_macos_n_adobe_xd_i_ll_show_you_how_to_install_it_for_free">- Windows 10 or MacOS \n- Adobe XD ( I\'ll show you how to install it for free )</string>
    <string name="buy_now">Buy Now</string>
    <string name="all_categories">All Categories</string>
    <string name="marketing">Marketing</string>
    <string name="bussiness">Business</string>
    <string name="mathematics">Mathematics</string>
    <string name="character_art_nschool_courses">Character Art\nSchool Courses</string>
    <string name="design">Design</string>
    <string name="_30_courses">30 Courses</string>
    <string name="the_ultimate_ndrawing_course">The Ultimate\nDrawing Course</string>
    <string name="ui_amp_ux_thinking_nfor_beginners3"><![CDATA[UI & UX Thinking \nFor Beginners]]></string>
    <string name="art_and_illustration">Art and Illustration</string>
    <string name="ui_amp_ux_thinking_nfor_beginners4"><![CDATA[UI & UX Thinking \nFor Beginners]]></string>
    <string name="web_amp_app_design_basic"><![CDATA[Web & App Design Basic]]></string>
    <string name="ui_amp_ux_thinking_nfor_beginners5"><![CDATA[UI & UX Thinking \nFor Beginners]]></string>
    <string name="illustrator_cc_n2020_masterclass2">Illustrator CC \n2020 MasterClass</string>
    <string name="live_stream">Live Stream</string>
    <string name="by_xxx_yyy">By XXX YYY</string>
    <string name="create_a_bussiness_website_with_wordpress_with_this_quick_5_step_guide">Create a Business website with WordPress with this Quick 5-Step guide</string>
    <string name="search">Search |</string>
    <string name="other_lives">Other Lives</string>
    <string name="in_this_tutorial_we_ll_be_building_a_stylish_landing_page_with_elementor_n_nmade_100_in_elementor_in_this_a_to_z_tutorial_you_ll_learn_n_n_creating_a_page_n_building_a_wordpress_menu">In this tutorial, we\'ll be building a stylish landing page with Elementor\n \nMade 100% in Elementor, in this A to Z tutorial you\'ll learn:\n\n*Creating a page.\n *Building a WordPress menu....</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <string name="build_a_landing_page_with_elementor_step_by_step">Build a Landing Page with Elementor: Step-by-Step</string>
    <string name="by_saar_kedem">By Saar Kedem</string>
    <string name="create_a_business_website_with_wordpress">Create a business website with WordPress</string>
    <string name="character_art_nschool_course">Character Art \nSchool Course</string>
    <string name="the_ultimate_ndrawing_course2">The Ultimate \nDrawing Course</string>
    <string name="my_course">My Course</string>
    <string name="xxxxx_xy_yyyyy">XXXXX XY YYYYY</string>
    <string name="about_academy">About Academy</string>
    <string name="support">Support</string>
    <string name="account_security">Account Security</string>
    <string name="account_settings">Account Settings</string>
    <string name="xxxxxyyyy_gmail_com">XXXXXYYYY@gmail.com</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_the_academy_app">Share the Academy App</string>
    <string name="logout">Logout</string>
    <string name="search2">Search</string>
    <string name="what_do_you_want_to_learn">What do you want to learn ?</string>
    <string name="location_call">Location Based Call</string>
    <string name="normal_call">Normal Language Based Call</string>
    <string name="gps_settings">GPS SETTINGS</string>
    <string name="gps_status">GPS STATUS</string>
    <string name="delete_account">Delete Account</string>
    <string name="fullname">fullname</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="maps">Maps</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="someone_is_calling">Someone is calling...</string>
    <string-array name="spinner_array">
        <item>French</item>
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="settings">
        <item>GPS settings</item>
        <item>GPS statuts</item>
        <item>Log out</item>
        <item>Delete Acount</item>
    </string-array>
    <string name="dialog_message">Welcome to Alert Dialog</string>
    <string name="dialog_title">Javatpoint Alert Dialog</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBfg8dquyZQIzl8DZ11e-amMlPWDfv0pgg</string>
    <string name="access_token">pk.eyJ1IjoiYWJkb3UzNCIsImEiOiJja3puMjZ0c3QwNHRtMnZsY3gweGMycHoxIn0.HqUXD9hjBmJ4gZjvajvP0Q</string>
</resources>