<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLightWhite">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/baseline_arrow_back_black_48"
                android:tint="@color/colorOrangeDark" />

            <View
                android:id="@+id/circle_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="-30dp"
                android:layout_marginRight="-30dp"
                android:background="@drawable/circle" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/circle_view"
                android:layout_margin="32dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/EnterPin"
                    android:textColor="@color/colorOrange"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/EnterPinEmail"
                    android:textColor="@color/colorGrayDark"
                    android:textSize="20sp"
                    app:fontFamily="sans-serif-medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="120dp"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_1"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_2"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_3"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_4"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_5"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_rounded"
                        android:gravity="center"
                        android:hint="@string/text_6"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:textColorHint="@color/colorOrange"
                        android:textSize="24sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/login_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/login_bordershape"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/Confirm"
                    android:textColor="@color/colorLightWhite"
                    android:textSize="30sp"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>